[gd_scene load_steps=6 format=3 uid="uid://d2nnm8hh0c27v"]

[ext_resource type="Script" uid="uid://clp8m5w7t5u81" path="res://Scripts/Bottle_Script.gd" id="1_tsfhg"]
[ext_resource type="Texture2D" uid="uid://mq01g4du4bav" path="res://Assets/Graphics/bottle-asset.png" id="2_grsh6"]
[ext_resource type="Texture2D" uid="uid://bj6wa8lkswbuf" path="res://Assets/Graphics/shaker.webp" id="3_v4ssl"]
[ext_resource type="Texture2D" uid="uid://rn2nbjdkqpf1" path="res://Assets/Graphics/alien.png" id="4_grsh6"]
[ext_resource type="Texture2D" uid="uid://dcysd8j2gcwn1" path="res://Assets/Graphics/table.webp" id="5_v4ssl"]

[node name="BaseScene" type="Node2D"]

[node name="ALien" type="Sprite2D" parent="."]
position = Vector2(383, 107)
scale = Vector2(0.785, 0.785)
texture = ExtResource("4_grsh6")

[node name="Table" type="Sprite2D" parent="."]
position = Vector2(-33, 61)
texture = ExtResource("5_v4ssl")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-500, 77)
scale = Vector2(0.76182, 0.76182)
script = ExtResource("1_tsfhg")
key = null
metadata/_edit_group_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-18, -176, -19, -61, -55, -27, -55, 161, -44, 174, 42, 177, 55, 162, 55, -30, 19, -65, 18, -176)

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
texture = ExtResource("2_grsh6")

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2(-372, 77)
scale = Vector2(0.76182, 0.76182)
script = ExtResource("1_tsfhg")
key = null
metadata/_edit_group_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D2"]
polygon = PackedVector2Array(-18, -176, -19, -61, -55, -27, -55, 161, -44, 174, 42, 177, 55, 162, 55, -30, 19, -65, 18, -176)

[node name="Sprite2D" type="Sprite2D" parent="Area2D2"]
texture = ExtResource("2_grsh6")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Steel-water-bottle-on-transparent-background-free-png" type="Sprite2D" parent="."]
position = Vector2(-35, 84)
scale = Vector2(0.322896, 0.322896)
texture = ExtResource("3_v4ssl")

[connection signal="input_event" from="Area2D" to="Area2D" method="_on_input_event"]
[connection signal="mouse_entered" from="Area2D" to="Area2D" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="Area2D" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Area2D2" to="Area2D2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D2" to="Area2D2" method="_on_mouse_exited"]
